--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,12 @@ services:
   - docker
 
 before_install:
+ - |
+   if ! git diff --name-only $TRAVIS_COMMIT_RANGE | grep -qvE '(.md)|^(LICENSE)'
+   then
+     echo "Not running CI since only docs were changed."
+     exit
+   fi
  # Pull docker images
  - docker pull yshalsager/docker-pyinstaller:linux
  - docker pull yshalsager/docker-pyinstaller:windows
