--- a/.travis.yml
+++ b/.travis.yml
@@ -1,34 +1,37 @@
 sudo: required
-
-services:
-  - docker
+language: python
+python:
+  - "3.7"
 
 before_install:
- - |
-   if ! git diff --name-only $TRAVIS_COMMIT_RANGE | grep -qvE '(.md)|^(LICENSE)'
-   then
-     echo "Not running CI since only docs were changed."
-     exit
-   fi
- # Pull docker images
- - docker pull yshalsager/docker-pyinstaller:linux
- - docker pull yshalsager/docker-pyinstaller:windows
+  - |
+    if ! git diff --name-only $TRAVIS_COMMIT_RANGE | grep -qvE '(.md)|^(LICENSE)'
+    then
+      echo "Not running CI since only docs were changed."
+      exit
+    fi
+
 
 script:
   - cd ${TRAVIS_BUILD_DIR}
-  - docker run -v "$(pwd):/src/" yshalsager/docker-pyinstaller:linux
-  - docker run -v "$(pwd):/src/" yshalsager/docker-pyinstaller:windows
+  - pip3 install -r requirements.txt
+  - pip3 install nuitka
+  - cd ${TRAVIS_BUILD_DIR}/xiaomi_flashable_firmware_creator/
+  - python -m nuitka --follow-imports create_flashable_firmware.py --standalone
+  - python -m nuitka --follow-imports main.py --standalone --plugin-enable=qt-plugins
+  - zip -r9 create_flashable_firmware-cli.zip create_flashable_firmware.dist/*
+  - zip -r9 create_flashable_firmware-gui.zip main.dist/*
 
 deploy:
   skip_cleanup: true
   provider: releases
   api_key: "$GIT_OAUTH_TOKEN"
   file_glob: true
-  file: ${TRAVIS_BUILD_DIR}/dist/*/create_flashable_firmware*
+  file: ${TRAVIS_BUILD_DIR}/xiaomi_flashable_firmware_creator/*.zip
   on:
     tags: false
     repo: XiaomiFirmwareUpdater/xiaomi-flashable-firmware-creator.py
-    branch: py
+    branch: gui
 
 notifications:
   email:
