--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ xiaomi_flashable_firmware_creator = "xiaomi_flashable_firmware_creator.xiaomi_fl
 
 [tool.poetry.dependencies]
 python = "^3.6"
+remotezip = "^0.9.2"
 
 [tool.poetry.dev-dependencies]
 
