--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,3 +29,8 @@ remotezip = "^0.9.2"
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
+
+[tool.pylint.options]
+disable = """
+  too-many-instance-attributes,
+"""
