--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "2.0.0"
 description = "Create flashable firmware zip from MIUI Recovery ROMs!"
 authors = ["yshalsager <ysh-alsager@hotmail.com>"]
 license = "GPL-3.0-only"
-repository = "https://github.com/XiaomiFirmwareUpdater/xiaomi-flashable-firmware-creator.py/"
+repository = "https://github.com/XiaomiFirmwareUpdater/xiaomi-flashable-firmware-creator/"
 homepage = "https://xiaomifirmwareupdater.com/projects/xiaomi-flashable-firmware-creator/"
 keywords = ["xiaomi", "firmware", "android"]
 packages = [
@@ -25,12 +25,14 @@ python = "^3.6"
 remotezip = "^0.9.2"
 
 [tool.poetry.dev-dependencies]
+pylint = "^2.6.0"
+pycodestyle = "^2.6.0"
+
+[tool.pylint.messages_control]
+disable = [
+    "too-many-instance-attributes"
+]
 
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
-
-[tool.pylint.options]
-disable = """
-  too-many-instance-attributes,
-"""
