--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ xiaomi_flashable_firmware_creator = "xiaomi_flashable_firmware_creator.xiaomi_fl
 [tool.poetry.dependencies]
 python = "^3.6"
 remotezip = "^0.9.2"
+protobuf = "^3.14.0"
 
 [tool.poetry.dev-dependencies]
 pylint = "^2.6.0"
