--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,19 +21,29 @@ readme = "README.md"
 xiaomi_flashable_firmware_creator = "xiaomi_flashable_firmware_creator.xiaomi_flashable_firmware_creator:main"
 
 [tool.poetry.dependencies]
-python = "^3.6"
+python = "^3.7"
 remotezip = "^0.9.2"
 protobuf = "^3.15.0"
 
 [tool.poetry.dev-dependencies]
-pylint = "^2.12.0"
-pycodestyle = "^2.8.0"
-
-[tool.pylint.messages_control]
-disable = [
-    "too-many-instance-attributes"
-]
+pre-commit = "^2.19.0"
+black = "^22.3.0"
+isort = "^5.10.1"
+flake8 = "^4.0.1"
 
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
+[tool.black]
+include = '(xiaomi_flashable_firmware_creator\/.*$|\.pyi?$)'
+exclude = '''
+/(
+    \.git
+  | __pycache__
+  | \.venv
+)/
+'''
+
+[tool.isort]
+profile = "black"
+
