poetry: exclude more folders form being formatted by black
Signed-off-by: yshalsager <ysh-alsager@hotmail.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,11 @@ exclude = '''
     \.git
   | __pycache__
   | \.venv
+  | ota_payload_extractor
+  | updater-scripts
+  | binaries
+  | files
+  | templates
 )/
 '''
 
