--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,54 +1,43 @@
-[tool.poetry]
+[project]
 name = "xiaomi_flashable_firmware_creator"
-version = "2.2.13"
-description = "Create flashable firmware zip from MIUI Recovery ROMs!"
-authors = ["yshalsager <ysh-alsager@hotmail.com>"]
-license = "GPL-3.0-only"
+version = "2.2.14"
+description = "Create flashable firmware zip from MIUI and HyperOS Recovery ROMs!"
+authors = [{ name = "yshalsager", email = "contact@yshalsager.com" }]
+license = { file = "LICENSE" }
 repository = "https://github.com/XiaomiFirmwareUpdater/xiaomi-flashable-firmware-creator/"
-homepage = "https://xiaomifirmwareupdater.com/projects/xiaomi-flashable-firmware-creator/"
+homepage = "https://xmfirmwareupdater.com/projects/xiaomi-flashable-firmware-creator/"
 keywords = ["xiaomi", "firmware", "android"]
-packages = [
-    { include = "xiaomi_flashable_firmware_creator" }
-]
-include = [
-    "README.md",
-    "pyproject.toml"
-]
-exclude = ["xiaomi_flashable_firmware_creator/tests"]
 readme = "README.md"
+requires-python = ">=3.12"
 
-[tool.poetry.scripts]
+dependencies = [
+    "remotezip>=0.12.3",
+    "protobuf>=4.22.1,<6.0.0",
+]
+
+[dependency-groups]
+dev = [
+    "pre-commit>=4.0.0",
+    "ruff>=0.7.1",
+]
+
+[project.scripts]
 xiaomi_flashable_firmware_creator = "xiaomi_flashable_firmware_creator.xiaomi_flashable_firmware_creator:main"
 
-[tool.poetry.dependencies]
-python = "^3.10"
-remotezip = ">=0.9.2,<0.13.0"
-protobuf = ">=3.15,<4.0"
-
-[tool.poetry.dev-dependencies]
-pre-commit = "^4.0.0"
-black = "^24.0.0"
-isort = "^5.12.0"
-flake8 = "^7.0.0"
-
 [build-system]
-requires = ["poetry>=0.12"]
-build-backend = "poetry.masonry.api"
-[tool.black]
-include = '(xiaomi_flashable_firmware_creator\/.*$|\.pyi?$)'
-exclude = '''
-/(
-    \.git
-  | __pycache__
-  | \.venv
-  | ota_payload_extractor
-  | updater-scripts
-  | binaries
-  | files
-  | templates
-)/
-'''
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
-[tool.isort]
-profile = "black"
+[tool.hatch.build.targets.sdist]
+only-include = ["xiaomi_flashable_firmware_creator", "pyproject.toml", "README.md"]
 
+[tool.ruff]
+fix = true
+src = ["xiaomi_flashable_firmware_creator"]
+target-version = "py312"
+line-length = 100
+
+[tool.ruff.format]
+quote-style = "single"
+indent-style = "space"
+line-ending = "lf"
