chore(dev): change build backend from hatchling to uv_build

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,33 +3,33 @@ name = "xiaomi_flashable_firmware_creator"
 version = "2.2.14"
 description = "Create flashable firmware zip from MIUI and HyperOS Recovery ROMs!"
 authors = [{ name = "yshalsager", email = "contact@yshalsager.com" }]
-license = { file = "LICENSE" }
-repository = "https://github.com/XiaomiFirmwareUpdater/xiaomi-flashable-firmware-creator/"
-homepage = "https://xmfirmwareupdater.com/projects/xiaomi-flashable-firmware-creator/"
+license-files = ["LICENSE"]
 keywords = ["xiaomi", "firmware", "android"]
 readme = "README.md"
 requires-python = ">=3.12"
-
-dependencies = [
-    "remotezip>=0.12.3",
-    "protobuf>=4.22.1,<6.0.0",
-]
+dependencies = ["remotezip>=0.12.3", "protobuf>=4.22.1,<6.0.0"]
 
 [dependency-groups]
-dev = [
-    "pre-commit>=4.0.0",
-    "ruff>=0.7.1",
-]
+dev = ["pre-commit>=4.0.0", "ruff>=0.13.2"]
+
+[tool.uv]
+package = true
+
+[project.urls]
+homepage = "https://xmfirmwareupdater.com/projects/xiaomi-flashable-firmware-creator/"
+repository = "https://github.com/XiaomiFirmwareUpdater/xiaomi-flashable-firmware-creator/"
 
 [project.scripts]
 xiaomi_flashable_firmware_creator = "xiaomi_flashable_firmware_creator.xiaomi_flashable_firmware_creator:main"
 
 [build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
+build-backend = "uv_build"
+requires = ["uv_build>=0.8.22,<0.9.0"]
 
-[tool.hatch.build.targets.sdist]
-only-include = ["xiaomi_flashable_firmware_creator", "pyproject.toml", "README.md"]
+[tool.uv.build-backend]
+module-root = ""
+module-name = "xiaomi_flashable_firmware_creator"
+source-include = ["templates/**", "binaries/**"]
 
 [tool.ruff]
 fix = true
