--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,11 @@ requires-python = ">=3.13"
 dependencies = ["remotezip>=0.12.3", "protobuf>=4.22.1,<6.0.0"]
 
 [dependency-groups]
-dev = ["pre-commit>=4.0.0", "ruff>=0.13.2"]
+dev = [
+    "pre-commit>=4.0.0",
+    "pytest>=8.4.2",
+    "ruff>=0.13.3",
+]
 
 [tool.uv]
 package = true
